gcc-10 (10-20200418-2) UNRELEASED; urgency=medium

  * Fix local patch for PR jit/87808. Closes: #954898.
  * gcc-snapshot: Depend on nvptx-tools with the nvptx offload compiler.
  * Provide symlinks for the offload target tools in <gcclibdir>/accel/<target>.

 -- Matthias Klose <doko@debian.org>  Mon, 20 Apr 2020 10:08:49 +0200

gcc-10 (10-20200418-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200418, c5bac7d127f2).
    - Fix PR lto/94612, offloading support.
    - Fix PR rtl-optimization/93974, ICE on ppc64el with -O3.

  [ Nicolas Boulenguez ]
  * Remove ada-lib-info-file-prefix-map.diff (see #87972).

  [ Matthias Klose ]
  * libgcc-sN: Don't add the libgcc-N-dev breaks for backports.
  * Include the complete offload compilers in the gcc-snapshot builds.

 -- Matthias Klose <doko@debian.org>  Sat, 18 Apr 2020 11:56:38 +0200

gcc-10 (10-20200411-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200411, f883c46b487).
  * Fix gnat cross builds.
  * Strip again the compiler executables.

 -- Matthias Klose <doko@debian.org>  Sun, 12 Apr 2020 15:12:15 +0200

gcc-10 (10-20200410-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200410, 7478addd84a).

  [ Matthias Klose ]
  * Update libgccjit and libgphobos symbols files.
  * Remove the libgcc-sN provides from the last upload.
  * Don't install the empty gcc_lib_dir in gcc-N-base.
  * Configure with -enable-libphobos-checking=release.

  [ Nicolas Boulenguez ]
  * Remove some dependencies older than oldoldstable.
  * Build gnat. Remove obsolete no_install option for libgnat.
  * ada-lib-info-file-source-date-epoch.diff: port fix from gcc-9.
  * ada: install libgnat-BV.so without adding a .1 suffix.
  * Rename libgnatvsn to libgnat_util (following upstream).
    Make the compatibility project abstract instead of generating twice.
  * ada-changes-in-autogen-output.diff: keep more upstream default values in
    order to reduce the diff noise.
