@@ -87,23 +87,6 @@ Depends: gcc-10-base (= ${gcc:Version}), libgcc-s2 (>= ${gcc:Version}), ${misc:D
 Description: GCC support library (dependency package)
  This is a dependency package, and can be safely removed after upgrade.
 
-Package: libgcc-10-dev
-X-DH-Build-For-Type: target
-Architecture: any
-Section: libdevel
-Priority: optional
-Recommends: ${dep:libcdev}
-Depends: gcc-10-base (= ${gcc:Version}), ${dep:libgcc}, ${dep:libssp}, ${dep:libgomp}, ${dep:libitm},
- ${dep:libatomic}, ${dep:libbtrace}, ${dep:libasan}, ${dep:liblsan},
- ${dep:libtsan}, ${dep:libubsan}, ${dep:libvtv},
- ${dep:libqmath}, ${dep:libunwinddev}, ${shlibs:Depends}, ${misc:Depends}
-Multi-Arch: same
-Breaks: libgccjit-10-dev (<< 10-20200321-1)
-Replaces: libgccjit-10-dev (<< 10-20200321-1)
-Description: GCC support library (development files)
- This package contains the headers and static library files necessary for
- building C programs which use libgcc, libgomp, libquadmath, libssp or libitm.
-
 Package: libgcc-s4
 X-DH-Build-For-Type: target
 Architecture: hppa
@@ -126,6 +109,23 @@ Priority: optional
 Depends: gcc-10-base (= ${gcc:Version}), libgcc-s4 (>= ${gcc:Version}), ${misc:Depends}, ${shlibs:Depends}
 Description: GCC support library (dependency package)
  This is a dependency package, and can be safely removed after upgrade.
+
+Package: libgcc-10-dev
+X-DH-Build-For-Type: target
+Architecture: any
+Section: libdevel
+Priority: optional
+Recommends: ${dep:libcdev}
+Depends: gcc-10-base (= ${gcc:Version}), ${dep:libgcc}, ${dep:libssp}, ${dep:libgomp}, ${dep:libitm},
+ ${dep:libatomic}, ${dep:libbtrace}, ${dep:libasan}, ${dep:liblsan},
+ ${dep:libtsan}, ${dep:libubsan}, ${dep:libvtv},
+ ${dep:libqmath}, ${dep:libunwinddev}, ${shlibs:Depends}, ${misc:Depends}
+Multi-Arch: same
+Breaks: libgccjit-10-dev (<< 10-20200321-1)
+Replaces: libgccjit-10-dev (<< 10-20200321-1)
+Description: GCC support library (development files)
+ This package contains the headers and static library files necessary for
+ building C programs which use libgcc, libgomp, libquadmath, libssp or libitm.
 
 Package: lib64gcc-s1
 X-DH-Build-For-Type: target
