@@ -358,29 +358,6 @@ Description: GCC support library (debug symbols, debug symbols)`'ifdef(`TARGET',
  This is a dependency package, and can be safely removed after upgrade.
 ')`'dnl libcompatgcc
 ')`'dnl libdbg
-')`'dnl libgcc
-
-ifenabled(`cdev',`
-Package: libgcc`'PV-dev`'LS
-TARGET_PACKAGE`'dnl
-Architecture: ifdef(`TARGET',`CROSS_ARCH',`any')
-Section: libdevel
-Priority: optional
-Recommends: ${dep:libcdev}
-Depends: BASELDEP, ${dep:libgcc}, ${dep:libssp}, ${dep:libgomp}, ${dep:libitm},
- ${dep:libatomic}, ${dep:libbtrace}, ${dep:libasan}, ${dep:liblsan},
- ${dep:libtsan}, ${dep:libubsan}, ${dep:libvtv},
- ${dep:libqmath}, ${dep:libunwinddev}, ${shlibs:Depends}, ${misc:Depends}
-ifdef(`MULTIARCH', `Multi-Arch: same
-')`'dnl
-ifdef(`TARGET',`',`Breaks: libgccjit`'PV-dev (<< 10-20200321-1)
-Replaces: libgccjit`'PV-dev (<< 10-20200321-1)
-')`'dnl
-BUILT_USING`'dnl
-Description: GCC support library (development files)
- This package contains the headers and static library files necessary for
- building C programs which use libgcc, libgomp, libquadmath, libssp or libitm.
-')`'dnl cdev
 
 Package: libgcc-s4`'LS
 TARGET_PACKAGE`'dnl
@@ -456,6 +433,29 @@ Description: GCC support library (debug symbols, debug symbols)`'ifdef(`TARGET',
  This is a dependency package, and can be safely removed after upgrade.
 ')`'dnl libcompatgcc
 ')`'dnl libdbg
+')`'dnl libgcc
+
+ifenabled(`cdev',`
+Package: libgcc`'PV-dev`'LS
+TARGET_PACKAGE`'dnl
+Architecture: ifdef(`TARGET',`CROSS_ARCH',`any')
+Section: libdevel
+Priority: optional
+Recommends: ${dep:libcdev}
+Depends: BASELDEP, ${dep:libgcc}, ${dep:libssp}, ${dep:libgomp}, ${dep:libitm},
+ ${dep:libatomic}, ${dep:libbtrace}, ${dep:libasan}, ${dep:liblsan},
+ ${dep:libtsan}, ${dep:libubsan}, ${dep:libvtv},
+ ${dep:libqmath}, ${dep:libunwinddev}, ${shlibs:Depends}, ${misc:Depends}
+ifdef(`MULTIARCH', `Multi-Arch: same
+')`'dnl
+ifdef(`TARGET',`',`Breaks: libgccjit`'PV-dev (<< 10-20200321-1)
+Replaces: libgccjit`'PV-dev (<< 10-20200321-1)
+')`'dnl
+BUILT_USING`'dnl
+Description: GCC support library (development files)
+ This package contains the headers and static library files necessary for
+ building C programs which use libgcc, libgomp, libquadmath, libssp or libitm.
+')`'dnl cdev
 
 ifenabled(`lib64gcc',`
 Package: lib64gcc-s1`'LS
@@ -6318,7 +6318,7 @@ Description: GCC offloading compiler to NVPTX
  programs linked with -fopenmp will by default add PTX code into the binaries,
  which can be offloaded to NVidia PTX capable devices if available.
 
-ifenabled(`libgompnvptx',`
+ifenabled(`gompnvptx',`
 Package: libgomp-plugin-nvptx`'GOMP_SO
 Architecture: amd64 ppc64el
 Multi-Arch: same
@@ -6330,7 +6330,7 @@ Description: GCC OpenMP v4.5 plugin for offloading to NVPTX
  This package contains libgomp plugin for offloading to NVidia
  PTX.  The plugin needs libcuda.so.1 shared library that has to be
  installed separately.
-')`'dnl libgompnvptx
+')`'dnl gompnvptx
 ')`'dnl olnvptx
 
 ifenabled(`olgcn',`
@@ -6349,7 +6349,7 @@ Description: GCC offloading compiler to GCN
  programs linked with -fopenmp will by default add GCN code into the binaries,
  which can be offloaded to AMD GCN capable devices if available.
 
-ifenabled(`libgompgcn',`
+ifenabled(`gompgcn',`
 Package: libgomp-plugin-amdgcn`'GOMP_SO
 Architecture: amd64
 Multi-Arch: same
@@ -6358,11 +6358,11 @@ Depends: BASEDEP, libgomp`'GOMP_SO`'LS, ${shlibs:Depends}, ${misc:Depends}
 BUILT_USING`'dnl
 Description: GCC OpenMP v4.5 plugin for offloading to GCN
  This package contains libgomp plugin for offloading to AMD GCN.
-')`'dnl libgompgcn
+')`'dnl gompgcn
 ')`'dnl olgcn
 
 ifenabled(`olhsa',`
-ifenabled(`libgomphsa',`
+ifenabled(`gomphsa',`
 Package: libgomp-plugin-hsa`'GOMP_SO
 Architecture: amd64
 Multi-Arch: same
@@ -6371,7 +6371,7 @@ Depends: BASEDEP, libgomp`'GOMP_SO`'LS, ${shlibs:Depends}, ${misc:Depends}
 BUILT_USING`'dnl
 Description: GCC OpenMP v4.5 plugin for offloading to HSA
  This package contains libgomp plugin for offloading to HSA.
-')`'dnl libgompnvptx
+')`'dnl gompnvptx
 ')`'dnl olnvptx
 
 ifdef(`TARGET',`',`dnl
