@@ -886,13 +886,13 @@ ifeq ($(with_libgccjit),yes)
   addons += libjit
 endif
 ifeq ($(with_offload_nvptx),yes)
-  addons += olnvptx libgompnvptx
+  addons += olnvptx gompnvptx
 endif
 ifeq ($(with_offload_gcn),yes)
-  addons += olgcn libgompgcn
+  addons += olgcn gompgcn
 endif
 ifeq ($(with_offload_hsa),yes)
-  addons += olhsa libgomphsa
+  addons += olhsa gomphsa
 endif
 ifeq ($(with_libcc1),yes)
   addons += libcc1
