@@ -513,7 +513,7 @@ with_common_libs := yes
 # version on the targeted arch?
 
 # build -dbg packages (with_dbg is empty when -dbg package are not built)
-ifneq (,$(filter $(distrelease),wheezy jessie stretch buster precise xenial bionic cosmic disco eoan))
+ifneq (,$(filter $(distrelease),wheezy jessie stretch buster precise trusty xenial bionic cosmic disco eoan))
   with_dbg = yes
 else
   ifeq ($(derivative),Ubuntu)
