@@ -1,8 +1,12 @@
 gcc-10 (10-20200418-2) UNRELEASED; urgency=medium
 
+  * GCC snapshot, taken from the trunk (20200422, c5bac7d127f2).
+    - Fix PR middle-end/94647. Closes: #958062.
   * Fix local patch for PR jit/87808. Closes: #954898.
   * gcc-snapshot: Depend on nvptx-tools with the nvptx offload compiler.
   * Provide symlinks for the offload target tools in <gcclibdir>/accel/<target>.
+  * Don't include lib*gomp1 and libgcc4 in the control file, when not building
+    the common libraries.
 
  -- Matthias Klose <doko@debian.org>  Mon, 20 Apr 2020 10:08:49 +0200
 
